--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "version": "0.0.0",
-  "name": "CHANGE_ME",
+  "name": "contact-form-grupo28",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -30,16 +30,32 @@
       "yarn lint:locales"
     ]
   },
+  "dependencies": {
+    "apollo-client": "^2.6.8",
+    "axios": "^0.21.1",
+    "react": "^16.12.0",
+    "react-apollo": "^3.1.3",
+    "react-dom": "^16.12.0",
+    "react-intl": "^3.12.0"
+  },
   "devDependencies": {
+    "@apollo/react-testing": "^3.1.3",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.8",
+    "@types/react": "^16.9.31",
+    "@vtex/danger": "^0.2.7",
     "@vtex/intl-equalizer": "^2.5.0",
     "@vtex/prettier-config": "^0.3.5",
+    "@vtex/test-tools": "^3.3.2",
+    "@vtex/tsconfig": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.5",
     "eslint": "^7.14.0",
     "eslint-config-vtex": "^12.8.11",
     "eslint-config-vtex-react": "^6.8.3",
+    "graphql": "^14.6.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
     "prettier": "^2.2.0",
-    "typescript": "^3.9.6",
-    "@vtex/danger": "^0.2.7"
+    "typescript": "^3.9.6"
   }
 }
