--- a/react/package.json
+++ b/react/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "CHANGE_ME",
+  "name": "contact-form-grupo28",
   "version": "0.0.0",
   "scripts": {
     "test": "vtex-test-tools test"
   },
   "dependencies": {
+    "@types/react-dom": "^17.0.9",
     "apollo-client": "^2.6.8",
+    "axios": "^0.21.1",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
@@ -13,13 +15,17 @@
   },
   "devDependencies": {
     "@apollo/react-testing": "^3.1.3",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.8",
-    "@types/react": "^16.9.31",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.6",
+    "@types/react": "^17.0.19",
     "@vtex/test-tools": "^3.3.2",
     "@vtex/tsconfig": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.5",
     "graphql": "^14.6.0",
-    "typescript": "^3.9.6"
+    "hiringcoders202128.contact-form-grupo28": "https://allissufteste--hiringcoders202128.myvtex.com/_v/private/typings/linked/v1/hiringcoders202128.contact-form-grupo28@0.0.1+build1630279895/public/@types/hiringcoders202128.contact-form-grupo28",
+    "typescript": "3.9.7",
+    "vtex.css-handles": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.css-handles@0.4.4/public/@types/vtex.css-handles",
+    "vtex.render-runtime": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.render-runtime@8.131.0/public/@types/vtex.render-runtime",
+    "vtex.styleguide": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.styleguide@9.145.0/public/@types/vtex.styleguide"
   }
 }
