--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "apollo-client": "^2.6.8",
     "axios": "^0.21.1",
+    "date-fns": "^2.23.0",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
